Fixing an issue with the error getting cut off on smaller screens

--- a/public/signin/resources/output.css
+++ b/public/signin/resources/output.css
@@ -455,6 +455,9 @@
   .text-center {
     text-align: center;
   }
+  .text-right {
+    text-align: right;
+  }
   .text-2xl {
     font-size: var(--text-2xl);
     line-height: var(--tw-leading, var(--text-2xl--line-height));
